# KOKO-API-VALUATION

./: .cursorrules  .dockerignore  .env.example  .envrc  .gitignore  Dockerfile  Makefile  PRD.md  README.md  README.scrapers.md  api-valuacion-de-propiedades.code-workspace  docker-compose.yml  fly-scrapers.toml  fly.toml  pyproject.toml  requirements.txt  vercel.json
.claude/: qb-dispatch.md
.github/workflows/: ci.yml  security.yml
api/: Dockerfile  README.md  dependencies.py  main.py  openapi_examples.py
api/routers/: catalog.py  health.py  valuation.py
auth/: README.md  __init__.py  admin.py  api_key.py  dependencies.py  middleware.py  rate_limit.py
db/: __init__.py  config.py  seeds.py  session.py
db/models/: __init__.py  base.py  catalog.py  city.py  comparable.py  exchange_rate.py  property_type.py  scrape_log.py  scrape_run.py  valuation.py  valuation_request.py  zone.py
infra/: backup.sh  crontab  migrate.sh  seed.sh
monitoring/: README.md  grafana-dashboard.json  sentry.py
public/: index.html
public/assets/: index-BjPYDgQw.js  index-CkJmbw-i.css  index-DC_LsvSx.css  index-h97jowmm.js
scrapers/: apify_runner.py  base.py  cron_config.py  exchange_rate.py  inmuebles24.py  normalize.py  runner.py  vivanuncios.py
scrapers/page_functions/: inmuebles24.js  vivanuncios.js
scripts/: bootstrap_db.py
services/: README.md  __init__.py  catalog_service.py  config.py  exceptions.py  health_service.py  logging.py  schemas.py  valuation_service.py
tests/: README.md  __init__.py  conftest.py  factories.py  test_base.py  test_inmuebles24_parser.py  test_vivanuncios_parser.py
tests/fixtures/: inmuebles24_sample.html  vivanuncios_sample.html
tests/test_api/: test_cors_headers.py  test_get_cities.py  test_get_zones.py  test_health.py  test_health_ready.py  test_post_valuation_happy_path.py  test_post_valuation_insufficient_data.py  test_post_valuation_unknown_city.py  test_post_valuation_validation_errors.py
tests/test_auth/: conftest.py  test_api_key.py  test_dependencies.py  test_middleware.py  test_rate_limit.py
tests/test_services/: test_catalog_service.py  test_health_service.py  test_schemas.py  test_valuation_service.py
tests/test_valuation/: README.md  conftest.py  test_confidence.py  test_engine.py  test_high_count_returns_alta.py  test_low_count_returns_baja.py  test_mid_count_returns_media.py  test_outliers.py  test_outliers_iqr_filter.py  test_preventas_excluded.py  test_queries.py  test_stale_comparables_excluded.py  (+4 more)
ui/: README.md  index.ts  package.json  tailwind.preset.cjs  tsconfig.json
valuation/: README.md  __init__.py  confidence.py  engine.py  outliers.py  queries.py  result.py
widget/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+22 files in other folders)
