[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koko-valuation-tests"
version = "0.1.0"
description = "Test suite for the KOKO MLS Property Valuation API"
requires-python = ">=3.11"
readme = "tests/README.md"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "factory-boy>=3.3",
    "testcontainers[postgresql]>=4.7",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "playwright>=1.45",
    "pytest-playwright>=0.5",
    "locust>=2.31",
    "freezegun>=1.5",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=app --cov=scrapers --cov-report=term-missing --cov-report=html --cov-fail-under=85"
testpaths = ["tests"]
markers = [
    "unit: fast in-memory tests",
    "integration: require Postgres container",
    "e2e: require browser via Playwright",
    "slow: long-running tests (load, big fixtures)",
    "load: locust load tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
