[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koko-valuation-api"
version = "0.1.0"
description = "KOKO MLS Property Valuation API"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "sqlalchemy>=2.0.25,<3.0",
    "asyncpg>=0.29,<1.0",
    "aiosqlite>=0.20,<1.0",
    "structlog>=24.1,<26.0",
    "python-dateutil>=2.9,<3.0",
    "httpx>=0.27,<1.0",
    "python-dotenv>=1.0,<2.0",
    "greenlet>=3.0,<4.0",
    "numpy>=1.26,<3.0",
]

[tool.setuptools]
packages = ["api", "auth", "db", "services", "valuation", "scrapers"]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "factory-boy>=3.3",
    "testcontainers[postgresql]>=4.7",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "playwright>=1.45",
    "pytest-playwright>=0.5",
    "locust>=2.31",
    "freezegun>=1.5",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=app --cov=scrapers --cov-report=term-missing --cov-report=html --cov-fail-under=85"
testpaths = ["tests"]
markers = [
    "unit: fast in-memory tests",
    "integration: require Postgres container",
    "e2e: require browser via Playwright",
    "slow: long-running tests (load, big fixtures)",
    "load: locust load tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
